--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .roboto-thin {
-    font-family: "Roboto", serif;
+    font-family: "Roboto", Arial;
     font-weight: 100;
     font-style: normal;
 }
@@ -26,7 +26,7 @@ nav{
 nav>ul>li{
     display: inline-block;
     list-style-type: none;
-    font-family: "Roboto";
+    font-family: Arial;
     font-size: 11px;
     word-spacing: 5px;
     padding: 10px;
@@ -70,7 +70,7 @@ nav>ul>li:hover{
 
 .text-group1>p{
     font-weight: 100;
-    font-family: "Roboto";
+    font-family: Arial;
 }
     
 
@@ -119,7 +119,7 @@ nav>ul>li:hover{
 
 .div3>p{
     color: black;
-    font-family: "Roboto";
+    font-family: Arial;
     display: flex;
     align-items: center;
 }
@@ -158,7 +158,7 @@ nav>ul>li:hover{
 }
 
 .text-group2>p{
-    font-family: "Roboto";
+    font-family:Arial;
     word-spacing: 2px;
     letter-spacing: 1px;
     font-weight: 300;
@@ -201,7 +201,7 @@ nav>ul>li:hover{
 }
 
 .img-group3>.short-img>p{
-    font-family: "Roboto";
+    font-family: Arial;
     font-size: 12px;
     font-weight: 100;
 }
@@ -223,7 +223,7 @@ nav>ul>li:hover{
 }
 
 .text-group4>p{
-    font-family: "Roboto";
+    font-family: Arial;
     word-spacing: 2px;
     letter-spacing: 1px;
 }
@@ -245,7 +245,7 @@ nav>ul>li:hover{
 }
 
 .div7>p{
-    font-family: "Roboto";
+    font-family: Arial;
     word-spacing: 2px;
     letter-spacing: 1px;
 }
@@ -264,13 +264,13 @@ nav>ul>li:hover{
 
 .last>h1{
     color: #bfc500;
-    font-family: "Roboto";
+    font-family: Arial;
     font-size: 16px;
     margin-right: 60px;
 }
 
 .last>p{
-    font-family: "Roboto";
+    font-family: Arial;
     font-size: 15px;
     font-weight: 800;
     word-spacing: 2px;
@@ -427,7 +427,7 @@ nav>ul>li:hover{
         height: 90px;
     }
     .div3>p{
-        font-size: 11px;
+        font-size: 13px;
     }
     .div3>h1{
         font-size: 18px;
@@ -499,7 +499,7 @@ nav>ul>li:hover{
         display: inline-block;
     }
     .logo1 {
-        width: 130px;
+        width: 150px;
     }
     nav>ul{
         margin-top: 0;
@@ -510,87 +510,129 @@ nav>ul>li:hover{
         text-align: center;
     }
     nav>ul>li{
-        font-size: 8px;
+        font-size: 10px;
         padding: 4px;
     }
+    .div1{
+        flex-direction: column;
+    }
     .text-group1>h1 {
-        font-size: 16px;
-    }
-    .text-group1>p {
-        font-size: 9px;
-    }
-    .img-group1>img {
-        width: 66px;
-        margin-top: 7px;
-        margin-right: 2px;
-    }
-    .div2>h1 {
-        font-size: 18px;
-    }
-    .div2>h3 {
-        font-size: 10px;
-    }
-    .div2>p {
-        font-size: 10px;
-    }
-    .div3 {
-        height: 75px;
-    }
-
-    .div3>p {
-        font-size: 10px;
-    }
-    .div3>h4 {
-        width: 54px;
-        font-size: 8px;
-    }
-    .div3>h1 {
-        font-size: 15px;
-    }
-    .text-group2>h1 {
         font-size: 20px;
     }
+    .text-group1>p br{
+        display: none;
+    }
+    .text-group1>p {
+        font-size: 14px;
+        font-weight: 500;
+    }
+    .img-group1{
+        text-align: center;
+    }
+    .img-group1>img {
+        width: 140px;
+        margin-top: 7px;
+        margin-right: 4px;
+    }
+    .div2>h1 {
+        font-size: 24px;
+    }
+    .div2>h3 {
+        font-size: 13px;
+    }
+    .div2>p {
+        font-size: 13px;
+    }
+    .div3 {
+        flex-wrap: wrap;
+        padding-bottom: 158px;
+        justify-content: center;
+        border-radius: 80px;
+        margin-top: 30px;
+    }
+    .div3>h1 {
+        font-size: 21px;
+    }
+    .div3>p {
+        font-size: 14px;
+        font-weight: 600;
+    }
+    .div3>h4 {
+        width: 108px;
+        font-size: 12px;
+        padding: 18px;
+    }
+    .div4{
+        flex-direction: column;
+    }
+    .text-group2>h1 {
+        font-size: 27px;
+    }
     .text-group2>p {
-        font-size: 10px;
+        font-size: 15px;
+        font-weight: 400;
+    }
+    .img-group2{
+        text-align: center;
     }
     .img-group2>img {
-        width: 150px;
-        margin-top: 15px;
+        width: 210px;
+        margin-top: 20px;
     }
     .text-group3>h1 {
-        font-size: 18px;
+        font-size: 22px;
     }
     .text-group3>p {
-        font-size: 9px;
+        font-size: 12px;
+    }
+    .img-group3{
+        flex-wrap: wrap;
     }
     .img-group3>.short-img {
-        width: 60px;
+        width: 30%;
     }
     .img-group3>.short-img>p {
-        font-size: 7px;
-        font-weight: 200;
+        font-size: 12px;
+        font-weight: 300;
+    }
+    .div6{
+        flex-direction: column;
+    }
+    .img-group4{
+        text-align: center;
     }
     .text-group4>h1 {
-        font-size: 18px;
+        font-size: 25px;
     }
     .text-group4>p {
-        font-size: 9px;
+        font-size: 14px;
+        font-weight: 400;
     }
     .img-group4>img {
-        width: 90px;
+        width: 120px;
+        margin-top: 10px;
     }
     .div7>h1 {
-        font-size: 18px;
+        font-size: 22px;
     }
     .div7>p {
-        font-size: 9px;
+        font-size: 12px;
+        font-weight: 400;
+    }
+    .div8{
+        flex-direction: column;
     }
     .div8>img {
-        height: 170px;
+        height: 330px;
+        width: 310px;
     }
     .last>h1 {
+        font-size: 14px;
+        margin-right: 30px;
+    }
+    .last p {
         font-size: 12px;
-        margin-right: 42px;
+        font-weight: 400;
     }
 }
 
@@ -601,65 +643,75 @@ nav>ul>li:hover{
         margin-right: -182px;
     }
     .logo1{
-        width: 146px;
+        width: 190px;
     }
     nav>ul>li {
-        font-size: 11px;
+        font-size: 16px;
         padding: 4px;
     }
     .div1 {
         flex-direction: column;
     }
     .text-group1>h1 {
-        font-size: 20px;
+        font-size: 28px;
     }
     .text-group1>p {
-        font-size: 12px;
+        font-size: 20px;
         font-weight: 500;
     }
     .img-group1>img {
         margin-right: 4px;
-        width: 85px;
+        width: 160px;
         font-weight: 400;
     }
     .img-group1{
         text-align: center;
     }
     .div2>h1 {
-        font-size: 20px;
+        font-size: 32px;
     }
     .div2>h3 {
-        font-size: 12px;
+        font-size: 19px;
     }
     .div2>p {
-        font-size: 11px;
+        font-size: 20px;
+    }
+    .div2>p br{
+        display: none;
+    }
+    .div3{
+        flex-wrap: wrap;
+        padding-bottom: 206px;
+        justify-content: center;
+        border-radius: 60px;
     }
     .div3>h1 {
-        font-size: 14px;
+        font-size: 22px;
         font-weight: 800;
     }
     .div3>p {
-        font-size: 10px;
-        font-weight: 400;
+        font-size: 19px;
+        font-weight: 600;
     }
     .div3>h4 {
-        width: 88px;
-        font-size: 10px;
-        font-weight: 800;
-        padding: 4px;
+        width: 117px;
+        font-size: 15px;
+        font-weight: 600;
+        padding: 12px;
     }
     .div4 {
         flex-direction: column;
     }
     .text-group2>h1 {
-        font-size: 20px;
+        font-size: 37px;
+        width: 100%;
     }
     .text-group2>p {
-        font-size: 11px;
-        font-weight: 400;
+        font-size: 19px;
+        font-weight: 500;
     }
     .img-group2>img {
-        width: 168px;
+        width: 270px;
         margin-top: 10px;
     }
     .img-group2{
@@ -668,22 +720,29 @@ nav>ul>li:hover{
     .div5{}
 
     .text-group3>h1 {
-        font-size: 20px;
+        font-size: 30px;
     }
     .text-group3>p {
-        font-size: 11px;
+        font-size: 21px;
     }
     .img-group3 {
-        flex-direction: column;
+        flex-direction: row;
+    }
+    .img-group3>.short-img {
+        width: 40%;
+    }
+    .img-group3>.short-img>p {
+        font-size: 19px;
+        font-weight: 300;
     }
     .div6{
         flex-direction: column;
     }
     .text-group4>h1 {
-        font-size: 22px;
+        font-size: 32px;
     }
     .text-group4>p {
-        font-size: 13px;
+        font-size: 20px;
     }
     .img-group4>img {
         width: 93px;
@@ -692,28 +751,29 @@ nav>ul>li:hover{
         text-align: center;
     }
     .img-group4>img {
-        width: 120px;
+        width: 170px;
     }
 
     .div7>h1 {
-        font-size: 21px;
+        font-size: 30px;
+        padding-top: 10px;
     }
     .div7>p {
-        font-size: 12px;
+        font-size: 18px;
     }
     .div8{
         flex-direction: column;
     }
     .div8>img {
         height: 360px;
-        width: 464px;
+        width: 420px;
         margin-top: 40px;
     }
     .last>h1 {
-        font-size: 13px;
+        font-size: 20px;
         margin-right: 34px;
     }
     .last p {
-        font-size: 11px;
+        font-size: 18px;
     }
 }
